--- a/index.html
+++ b/index.html
@@ -35,6 +35,90 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <!--logo-->
+                <img src="./assets/img/logo-lucy.png" alt="LUCY" class="logo">
+                <!--nav-->
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__item">
+                            <a href="#!" class="navbar__link">Home</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#!" class="navbar__link">About</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#!" class="navbar__link">Services & Rates</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#!" class="navbar__link">Reviewa</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#!" class="navbar__link">Contacts us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!--header btn-->
+                <div class="header__btn">
+                    <a href="#!" class="header__btn--link">Sign up</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--hero-->
+    <section class="hero">
+        <div class="container">
+            <div class="hero__inner">
+                <!--hero media-->
+                <div class="hero__media">
+                    <div class="hero__img--wrap">
+                        <img src="./assets/img/hero-cat.png" alt="" class="hero__img">
+                        <img src="./assets/img/hero-decor1.svg" alt="" class="hero__decor hero__decor--right">
+                        <img src="./assets/img/hero-decor2.svg" alt="" class="hero__decor hero__decor--left">
+                    </div>
+                    <div class="hero__img--wrap--small">
+                        <img src="./assets/img/hero-dog-big.png" alt="" class="hero__img--small">
+                    </div>
+                    <div class="hero__services">
+                        <div class="hero__services--health">
+                            <div class="dog__health">
+                                <img src="./assets/img/hero-dog-small1.png" alt="" class="dog__health--img">
+                            </div>
+                            <div class="dog__health--heading">
+                                <p class="dog__health--head">Pet Health</p>
+                                <div class="hero__underline hero__underline1"></div>
+                                <div class="hero__underline hero__underline2"></div>
+                            </div> 
+                        </div>
+                        <div class="hero__services--health">
+                            <div class="dog__health">
+                                <img src="./assets/img/hero-dog-samll2.png" alt="" class="dog__health--img">
+                            </div>
+                            <div class="dog__health--heading">
+                                <p class="dog__health--head">Pet care</p>
+                                <div class="hero__underline hero__underline1"></div>
+                                <div class="hero__underline hero__underline2"></div>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+                <!--hero content-->
+               <section class="hero__content">
+                    <h1 class="hero__heading">Established &
+                        Trusted Pet
+                        Care Service</h1>
+                    <p class="hero__subheading">Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.</p>
+                    <div class="hero__action">
+                        <div class="hero__btn">
+                            <a href="" class="hero__subbtn">Book a Meet</a>
+                        </div>
+                        <p class="hero__desc--btn">Schedule a Call</p>
+                       </div>
+               </section>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
