--- a/index.html
+++ b/index.html
@@ -120,5 +120,79 @@
             </div>
         </div>
     </section>
+    <main>
+        <!--about-->
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <section class="about__content">
+                        <p class="about__label">//  About  //</p>
+                        <h2 class="about__heading section__heading">Best Agency For Your Pet.</h2>
+                        <p class="about__desc sectiong__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <div class="about__checklist">
+                            <span class="about__check--item">Certified Groomer</span>
+                            <span class="about__check--item">Animal Lover</span>
+                            <span class="about__check--item">14+ Years Experience</span>
+                            <span class="about__check--item">Pet Parent Of 3 Dogs</span>
+                        </div>
+                    </section>
+                    <div class="about__media">
+                        <!--about card-->
+                           <div class="about__card">
+                                <b class="about__card--title">20+</b>
+                                <p class="about__card--desc">Years Experience</p>
+                                <img src="./assets/icon/tay-cat.svg" alt="" class="about__decor">
+                           </div> 
+                           <!--about img wrapper-->
+                           <figure class="about__img--wrapper">
+                            <img src="./assets/img/about-img.png" alt="" class="about__img">
+                            <img src="./assets/icon/about-decor2.svg" alt="" class="about__media--decor"> 
+                           </figure>
+                    </div>
+                    <div class="about__media">
+                        <figure class="about__img--wrapper about__img--wrapper--bottom">
+                            <img src="./assets/img/about-img02.png" alt="" class="about__img">
+                            <img src="./assets/icon/vong.svg" alt="" class="about__media--decor about__media--decor--bottom"> 
+                           </figure>
+                    </div>
+                    <section class="about__content">
+                        <h2 class="section-heading">Taking A Vacation?
+                            So Is Your Pet.</h2>
+                        <p class="section-desc">We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily individual time in our large play yard.</p>
+                        <div class="tab">
+                            <ul class="tab__list">
+                                <li class="tab__item tab__item--active">
+                                    <img src="./assets/icon/about-icon1.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Boarding</span>
+                                </li>
+                                <li class="tab__item ">
+                                    <img src="./assets/icon/about-icon2.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Daycare</span>
+                                </li>
+                                <li class="tab__item">
+                                    <img src="./assets/icon/about-icon3.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Transport</span>
+                                </li>
+                            </ul>
+                            <div class="tab__contents">
+                                <div class="tab__content-item tab__content-item-active">
+                                    <p class="tab__content-desc">While you're on holiday, here's where your furry friends will spend their time1.</p>
+                                    <a href="" class="tab__content-more">View more</a>
+                                </div>
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">While you're on holiday, here's where your furry friends will spend their time2.</p>
+                                    <a href="" class="tab__content-more">View more</a>
+                                </div>
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">While you're on holiday, here's where your furry friends will spend their time3.</p>
+                                    <a href="" class="tab__content-more">View more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
