--- a/index.html
+++ b/index.html
@@ -252,6 +252,50 @@
                 </div>
             </div>
         </section>
+        <!--staff-->
+        <section class="staff">
+            <div class="container">
+                <p class="staff__desc">Pet Care Staff</p>
+                <h2 class="staff__heading">Meet Our Groomers</h2>
+                <div class="staff__list">
+                    <article class="staff-item">
+                        <figure class="staff-item__img-wrap">
+                            <img src="./assets/img/staff1.png" alt="" class="staff-item__img">
+                        </figure>
+                        <img src="./assets/img/staff-decor1.png" alt="" class="staff-item__decor">
+                        <p class="staff-item__title">Pet Trainer</p>
+                        <h3 class="staff-item__name">Meghan Samit</h3>
+                    </article>
+                    <article class="staff-item">
+                        <figure class="staff-item__img-wrap">
+                            <img src="./assets/img/staff2.png" alt="" class="staff-item__img">
+                        </figure>
+                        <img src="./assets/img/staff-decor2.png" alt="" class="staff-item__decor staff-item__decor2">
+                        <p class="staff-item__title">Veterinarian</p>
+                        <h3 class="staff-item__name">Alissa Silva</h3>
+                    </article>
+                    <article class="staff-item">
+                        <figure class="staff-item__img-wrap">
+                            <img src="./assets/img/staff3.png" alt="" class="staff-item__img">
+                        </figure>
+                        <img src="./assets/img/staff-decor3.png" alt="" class="staff-item__decor">
+                        <p class="staff-item__title">Veterinarian</p>
+                        <h3 class="staff-item__name">Cindy Harris</h3>
+                    </article>
+                    <article class="staff-item">
+                        <figure class="staff-item__img-wrap">
+                            <img src="./assets/img/staff4.png" alt="" class="staff-item__img">
+                        </figure>
+                        <img src="./assets/img/staff-decor4.png" alt="" class="staff-item__decor staff-item__decor2">
+                        <p class="staff-item__title">Animal Caretaker</p>
+                        <h3 class="staff-item__name">Lucas Tony</h3>
+                    </article>
+                </div>
+                <div class="staff__cta-wrap">
+                    <a href="" class="staff-btn">View All Team</a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
