hoan thanh pricing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>LUCY</title>
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
-
+    <!--animation-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Embed fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -296,6 +297,135 @@
                 </div>
             </div>
         </section>
+        <!--pricing-->
+        <section class="pricing">
+            <div class="container">
+                <h2 class="pricing-heading">The Best Choice</h2>
+                <p class="pricing-desc">We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily individual time in our large play yard.</p>
+                <div class="pricing__switch-wrap">
+                    <div class="pricing__switch-inner">
+                        <div class="pricing__switch">
+                            <input type="checkbox" name="" id="pricing-switch" class="pricing__switch-input">
+                            <label for="pricing-switch" class="pricing__switch-label">
+                                <span class="pricing__switch-value">Monthly</span>
+                                <span class="pricing__switch-value">Yearly</span>
+                            </label>
+                        </div>
+                        <!--sale off-->
+                        <img src="./assets/icon/pricing-sell-off.svg" alt="" class="pricing__sale-off" data-aos="flip-up">
+                    </div>
+                    <div class="pricing-body">
+                        <div class="pricing-item" data-aos="flip-right">
+                            <span class="pricing-rank">Basic</span>
+                            <h3 class="pricing-execution">Day care</h3>
+                            <p class="pricing-dola">$150</p>
+                            <a href="" class="pricing-btn">Purchase Now</a>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Single room</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Socialist Exercise</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Spa and Grooming</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Excercise 2x</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Grooming 2x</p>
+                            </div>
+                        </div>
+                        <div class="pricing-item" data-aos="flip-right">
+                            <span class="pricing-rank">Exclusive</span>
+                            <h3 class="pricing-execution">2X Care</h3>
+                            <p class="pricing-dola">$199</p>
+                            <a href="" class="pricing-btn">Purchase Now</a>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Single room</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Socialist Exercise</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Spa and Grooming</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Excercise 2x</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Grooming 2x</p>
+                            </div>
+                        </div>
+                        <div class="pricing-item" data-aos="flip-right">
+                            <span class="pricing-rank">Platinum</span>
+                            <h3 class="pricing-execution">4X Care</h3>
+                            <p class="pricing-dola">$299</p>
+                            <a href="" class="pricing-btn">Purchase Now</a>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Single room</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Socialist Exercise</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Spa and Grooming</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Excercise 2x</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Custom Meals</p>
+                            </div>
+                            <div class="pricing-list">
+                                <img src="./assets/icon/pricing-check.svg" alt="" class="pricing__check-item">
+                                <p class="pricing__list--services">Grooming 2x</p>
+                            </div>
+                        </div>
+                       
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
