hoan thanh review

--- a/index.html
+++ b/index.html
@@ -422,6 +422,29 @@
                 </div>
             </div>
         </section>
+        <!--review-->
+        <section class="review">
+            <div class="container">
+                <div class="review-body">
+                    <img src="./assets/icon/Arrowleft-review.svg" alt="" class="review-nav">
+                    <div class="review-img">
+                        <img src="./assets/img/image-review.png" alt="" class="review__img--inner">
+                    </div>
+                    <div class="review-content">
+                        <h2 class="review-heading">Our Reviews</h2>
+                        <p class="review-desc">“It was very comforting to recieve a text and pics each day about our pets and how they were doing. It was also nice that my pets were in the comfortable environment of their own home and received playfull attention from our pet sitters as well. Thanks so much!”</p>
+                        <p class="review-subdesc">Karla Deras</p>
+                    </div>
+                    <img src="./assets/icon/ArrowRight-review.svg" alt="" class="review-nav review-nav-decor">
+                </div>
+                <div class="review-dot">
+                    <div class="review-dot1"></div>
+                    <div class="review-dot2"></div>
+                    <div class="review-dot3"></div>
+                    <div class="review-dot4"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
