hoan thanh review decor

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <section class="review">
             <div class="container">
                 <div class="review-body">
-                    <img src="./assets/icon/Arrowleft-review.svg" alt="" class="review-nav">
+                    <img src="./assets/icon/Arrowleft-review.svg" alt="" class="review-nav" data-aos="flip-left">
                     <div class="review-img">
                         <img src="./assets/img/image-review.png" alt="" class="review__img--inner">
                     </div>
@@ -435,7 +435,7 @@
                         <p class="review-desc">“It was very comforting to recieve a text and pics each day about our pets and how they were doing. It was also nice that my pets were in the comfortable environment of their own home and received playfull attention from our pet sitters as well. Thanks so much!”</p>
                         <p class="review-subdesc">Karla Deras</p>
                     </div>
-                    <img src="./assets/icon/ArrowRight-review.svg" alt="" class="review-nav review-nav-decor">
+                    <img src="./assets/icon/ArrowRight-review.svg" alt="" class="review-nav review-nav-decor " data-aos="flip-right">
                 </div>
                 <div class="review-dot">
                     <div class="review-dot1"></div>
