hoan thanh blog

--- a/index.html
+++ b/index.html
@@ -445,6 +445,46 @@
                 </div>
             </div>
         </section>
+        <!--blog-->
+        <section class="blog">
+            <div class="container">
+                <div class="blog-inner">
+                    <div class="blog-top">
+                        <h2 class="blog-heading">Our Blog</h2>
+                        <div class="blog-subheading">
+                            <p class="blog-desc">Stay up to date with the latest tech trands and news in the pets.</p>
+                            <a href="" class="blog-btn">View All Blog</a>
+                        </div>
+                    </div>
+                    <div class="blog-body">
+                        <div class="blog-item">
+                           <div class="blog-img-inner">
+                            <span class="blog-date">21 june 2021</span>
+                            <img src="./assets/img/blog-1.png" alt="" class="blog-img">
+                           </div>
+                           <h3 class="blog-body-heading">Building Bonds and Trusting Relationships with Your Pets.</h3>
+                           <p class="blog-body-desc">There isn’t a relationship around that can survive without trust. My relationship with my dog Peyton is deep...</p>
+                        </div>                       
+                        <div class="blog-item">
+                            <div class="blog-img-inner blog-img-decor1">
+                             <span class="blog-date">28 june 2021</span>
+                             <img src="./assets/img/blog-2.png" alt="" class="blog-img">
+                            </div>
+                            <h3 class="blog-body-heading">Celebrity pet photographer Grace Chon on taking ...</h3>
+                            <p class="blog-body-desc">Doting pet parents have a relentless need to constantly photograph every adorable pet moment...</p>
+                         </div>
+                         <div class="blog-item">
+                            <div class="blog-img-inner blog-img-decor2">
+                             <span class="blog-date">10 july 2021</span>
+                             <img src="./assets/img/blog-3.png" alt="" class="blog-img">
+                            </div>
+                            <h3 class="blog-body-heading">5 Simple Tricks To Create A More Conscious ...</h3>
+                            <p class="blog-body-desc">It is easy to forget that animals are living creatures with a beating heart.</p>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
