hoan thanh footer

--- a/index.html
+++ b/index.html
@@ -485,6 +485,61 @@
                 </div>
             </div>
         </section>
+        <section class="footer">
+            <div class="container">
+                <div class="footer-inner">
+                    <div class="footer-infor">
+                        <div class="footer-contact">
+                            <div class="footer-logo-inner">
+                                <img src="./assets/img/logo-lucy.png" alt="" class="footer-logo">
+                                <h1 class="footer-logo-name">Lucy</h1>
+                            </div>
+                            <input type="email" name="email" id="email">
+                            <label class="footer-email" for="email">Enter your email</label>
+                        </div>
+                        <span class="footer-link">Follow Us</span>
+                        <div class="footer-socical">
+                            <img src="./assets/icon/footer-link-1.svg" alt="" class="footer-icon">
+                            <img src="./assets/icon/footer-link-2.svg" alt="" class="footer-icon">
+                            <img src="./assets/icon/footer-link-3.svg" alt="" class="footer-icon">
+                            <img src="./assets/icon/footer-link-4.svg" alt="" class="footer-icon">
+                        </div>
+                    </div>
+                    <div class="footer-list">
+                        <div class="footer-list-top">
+                            <div class="footer-list-top1">
+                            <span class="footer-list-top-heading">Explore</span>
+                            <p class="footer-list-top-desc">About Us</p>
+                            <p class="footer-list-top-desc">About Us</p>
+                            <p class="footer-list-top-desc">About Us</p>
+                            <p class="footer-list-top-desc">About Us</p>
+                            </div>
+                            <div class="footer-list-top2">
+                                <span class="footer-list-top-heading">Useful links</span>
+                                <p class="footer-list-top-desc">About Us</p>
+                                <p class="footer-list-top-desc">About Us</p>
+                                <p class="footer-list-top-desc">About Us</p>
+                                <p class="footer-list-top-desc">About Us</p>
+                                </div>
+                        </div>
+                        <div class="footer-list-bottom">
+                            <div class="footer-list-top3">
+                                <span class="footer-list-top-heading">Contact Info</span>
+                                <p class="footer-list-top-desc">abc@gmail.com</p>
+                                <p class="footer-list-top-desc">0 (800)-000-00-00</p>
+                                <p class="footer-list-top-desc">New York, NY, Rocawy 7</p>
+                                </div>
+                                <div class="footer-list-top4">
+                                    <span class="footer-list-top-heading">Opening Time</span>
+                                    <p class="footer-list-top-desc">Mon – Fri : 08.00 am – 20.00 pm</p>
+                                    <p class="footer-list-top-desc">Saturday : 09.00 am – 20.00 pm </p>
+                                    <p class="footer-list-top-desc">Sunday: We are Closed</p>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
